# opencode_ios_client

./: .gitignore  AGENTS.md  README.md  index.html  privacy.html  support.html  working.md
OpenCodeClient/: Info.plist  build_log.txt  build_log_2.txt
OpenCodeClient/OpenCodeClient/: AppState+AIUsageQuota.swift  AppState+CarMode.swift  AppState+ClientCapabilities.swift  AppState+DeepLinks.swift  AppState+Drafts.swift  AppState+FileTree.swift  AppState+FluidVoice.swift  AppState+HostProfiles.swift  AppState+LastViewed.swift  AppState+Messages.swift  AppState+Models.swift  AppState+Permissions.swift  AppState+SSE.swift  AppState+Sessions.swift  (+4 more)
OpenCodeClient/OpenCodeClient.xcodeproj/: project.pbxproj
docs/: F2_session_orientation_design.md  F3_voice_steer_design.md  Markdown_Web_Preview_PRD.md  Markdown_Web_Preview_RFC.md  OpenCode_Web_API.md  OpenCode_iOS_Client_PRD.md  OpenCode_iOS_Client_RFC.md  SSE_ROBUSTNESS.md  SYNC_STREAMING_RESEARCH.md  TMP_deep_link.md  WORKING.md  car_mode_design.md  client_capabilities_prd.md  client_capabilities_protocol.md  client_capabilities_rfc.md  code_review.md  design.md  lessons.md  session_disappear_investigation.md  skill_operate_ios_simulator.md  skill_ui_test_tasks.md  testing_strategy_and_behavior_guard_plan.md  tests.md  todo.md  yage_fix_work.md
skills/: client_capabilities.md
ui_driver/: .gitignore  README.md  pyproject.toml
ui_driver/tests/: test_cli.py  test_driver.py
ui_driver/ui_driver/: __init__.py  cli.py  driver.py  simctl.py  xcodebuild.py
web_preview_shell/: preview.css  preview.html  preview.js  verify.mjs
(+90 files in other folders)
