[project]
name = "opencode-ios-ui-driver"
version = "0.1.0"
description = "Deterministic simctl operation skeleton for OpenCode iOS UI tests"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
ios-ui-driver = "ui_driver.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ui_driver*"]
